<resources>
    <string name="app_name">lugaLuga</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_esq">Esqueci minha senha</string>
    <string name="hint_login">LOGIN</string>
    <string name="hint_cadastro">CADASTRO</string>
    <string name="hint_new">Não tenho uma conta</string>

    <string name="tv_produto">Nome produto</string>
    <string name="tv_preco">R$ 00,00</string>
    <string name="tv_desc">The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</string>

    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="dataNasc">Data de Nascimento</string>
    <string name="cep">CEP</string>
    <string name="log">Logradouro</string>
    <string name="n">N°</string>
    <string name="compl">Complemento</string>
    <string name="bairro">Bairro</string>
    <string name="city">Cidade</string>

    <string-array name="uf_cadastro">

        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>

    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>