<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/carrinho" />

    <TextView
        android:id="@+id/tv_nomeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_produto"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img"
        />

    <TextView
        android:id="@+id/tv_precoProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_preco"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img"
        />

    <TextView
        android:id="@+id/tv_descProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_desc"
        android:textSize="22sp"
        android:layout_marginTop="25dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nomeProduto"
        />


</androidx.constraintlayout.widget.ConstraintLayout>